--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "core-js": "^3.8.2",
         "deepai": "^1.0.17",
         "firebase": "^7.24.0",
+        "vee-validate": "^4.5.7",
         "vue": "^2.6.12",
         "vue-youtube-embed": "^2.2.2",
+        "vuelidate": "^0.7.7",
         "vuetify": "^2.4.2"
     },
     "devDependencies": {
